# python-kafka-ssl-consumer

./: .env.example  .gitignore  README.md  pyproject.toml
src/kafka_consumer/: config.py  consumer.py
