[project]
name = "kafka_consumer_ssl"
version = "0.1.0"
description = "Kafka Consumer with SSL Authentication"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "confluent-kafka>=2.0.2",
    "python-dotenv>=0.19.0",
    "certifi>=2023.7.22"  # For CA certificates
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]